# irmin-tree-serialisation

./: .ocamlformat  Makefile  dune-project  irmin-tree-serialisation.opam  irmin-tree-serialisation.opam.template
irmin/: irmin.opam
irmin/src/irmin/: commit.ml  contents.ml  hash.ml  node.ml  path.ml  path.mli  store.ml  sync_ext.ml  tree.ml  tree_intf.ml
irmin/src/irmin-chunk/: irmin_chunk.ml
irmin/src/irmin-git/: irmin_git.ml
irmin/src/irmin-pack/: dict.ml  inode.ml  irmin_pack.ml  pack.ml  pack_index.ml
irmin/src/irmin/type/: type.ml  type.mli  type_binary.ml  type_core.ml  type_size.ml
irmin/test/irmin/: test_type.ml
irmin/test/irmin-chunk/: test.ml
irmin/test/irmin-pack/: common.ml
notebooks/: context_dump_benchmarking.ipynb
src/: dune  main.ml  serialise.ml  store.ml  store_hash.ml  store_index.ml  tree_fold.ml
